--- a/app/src/main/res/layout/activity_flight.xml
+++ b/app/src/main/res/layout/activity_flight.xml
@@ -3,34 +3,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.rodneygeerlings.myflightinfo.activities.FlightActivity"
+    tools:context="com.rodneygeerlings.myflightinfo.activities.FlightDetailActivity"
     android:orientation="horizontal">
-
-    <EditText
-        android:id="@+id/et_search_box"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter a query, then click Search"
-        android:textSize="22sp" />
-
-    <TextView
-        android:id="@+id/tv_url_display"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Click search and your URL will show up here!"
-        android:textSize="22sp" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_schipholdata"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Make a search!"
-            android:textSize="18sp" />
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_flight_direction_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Vluchtbestemming"
+                android:textSize="12sp" />
+            <TextView
+                android:id="@+id/tv_flight_direction"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp" />
+            <TextView
+                android:id="@+id/tv_flight_name_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Vluchtnaam"
+                android:textSize="12sp" />
+            <TextView
+                android:id="@+id/tv_flight_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp" />
+            <TextView
+                android:id="@+id/tv_flight_number_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Vluchtnummer"
+                android:textSize="12sp" />
+            <TextView
+                android:id="@+id/tv_flight_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp" />
+        </LinearLayout>
     </ScrollView>
 </LinearLayout>
