--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,53 +13,12 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/GreatingText"
-            android:layout_width="0dp"
-            android:layout_height="79dp"
-            android:layout_marginBottom="80dp"
-            android:layout_weight="1"
-            android:text="@string/greatingtext"
-            android:textSize="40sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.451"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.079" />
-
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/rv_flight_list">
+        </android.support.v7.widget.RecyclerView>
     </LinearLayout>
-
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-
-
-        <Button
-            android:id="@+id/flightInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/flightButtonName" />
-
-        <Button
-            android:id="@+id/weatherInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/weatherButtonName" />
-
-        <Button
-            android:id="@+id/contactInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/contactButtonName" />
-    </GridLayout>
-
-
 
 </LinearLayout>
 
