--- a/app/src/main/res/layout/flight_list_item.xml
+++ b/app/src/main/res/layout/flight_list_item.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ll_flight_list_item">
+
     <TextView
-        android:id="@+id/tv_flight_item_number"
+        android:id="@+id/tv_flight_item_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <Button
+        android:id="@+id/btn_view_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Bekijk details"/>
