--- a/app/src/main/res/layout/activity_flight.xml
+++ b/app/src/main/res/layout/activity_flight.xml
@@ -47,6 +47,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp" />
+            <Button
+                android:id="@+id/btn_add_to_favorites"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
