--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -6,10 +6,20 @@
     android:layout_height="match_parent"
     tools:context="com.rodneygeerlings.myflightinfo.activities.FavoritesActivity">
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="@string/favorites" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_favorites"
             android:layout_width="368dp"
