--- a/app/src/main/res/layout/flight_list_item.xml
+++ b/app/src/main/res/layout/flight_list_item.xml
@@ -7,6 +7,12 @@
     android:id="@+id/ll_flight_list_item">
 
     <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/flightinfo" />
+
+    <TextView
         android:id="@+id/tv_flight_item_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -15,5 +21,5 @@
         android:id="@+id/btn_view_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Bekijk details"/>
+        android:text="@string/details"/>
 </LinearLayout>
